입력 저장됨

--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="css/mainStyle.css">
 </head>
-
+<div class="modalOverlay">
+  <div class="modalPs">
+    <h2 class="card-title"></h2>
+    <form>
+      <textarea name="" id="" class="card-text" placeholder="/ AI야 대답해줘"></textarea>
+      <button type="button" class="close">닫기</button>
+    </form>
+  </div>
+</div>
 <body>
   <header>
     <h1>I Can Do It!</h1>
   </header>
-
   <div class="container">
     <div class="board" draggable="true">
       <div class="board-title">
