프론트엔드 완성, gpt 개발 js 생성

--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-<html>
-
 <head>
   <title>I Can Do It!</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="css/mainStyle.css">
 </head>
-<div class="modalOverlay">
-  <div class="modalPs">
-    <h2 class="card-title"></h2>
-    <form>
-      <textarea name="" id="" class="card-text" placeholder="/ AI야 대답해줘"></textarea>
-      <button type="button" class="close">닫기</button>
-    </form>
-  </div>
-</div>
+
 <body>
+  <div class="modalOverlay">
+    <div class="modalPs">
+      <h2 class="modal-title"></h2>
+      <form>
+        <textarea name="" id="" class="modal-text" placeholder="/ AI야 대답해줘"></textarea>
+        <button type="button" class="close">닫기</button>
+      </form>
+    </div>
+  </div>
+
   <header>
     <h1>I Can Do It!</h1>
   </header>
+
   <div class="container">
     <div class="board" draggable="true">
       <div class="board-title">
@@ -48,9 +49,10 @@
       </div>
     </div>
   </div>
+  
   <div class="trash" style="display: none;"></div>
 
-  <script src="js/main.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
